--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -4,7 +4,7 @@
 <hr/>
 
 <h3>The first movie</h3>
-<p>Very intersting and cool</p>
+<p>Very interesting and cool</p>
 
 <h3>The second movie</h3>
 <p>Makes you feel feelings</p>
